maep (1.0.1) unstable; urgency=low

  * Keep map centered on configure, no need for app to catch event anymore

 -- Till Harbaum <till@harbaum.org>  Fri, 11 Dec 2009 11:05:37 +0100

maep (1.0) unstable; urgency=low

  * Initial release based on gpxview 0.9.0

 -- Till Harbaum <till@harbaum.org>  Mon, 07 Dec 2009 18:25:10 +0100